# NedoTurkishTokenizer

./: .gitattributes  .gitignore  CITATION.cff  GITHUB_READY_STATUS.md  README.en.md  README.md  pyproject.toml
dataset/: README.en.md  README.md  nedo_final1000_gold.csv  nedo_final1000_gold.jsonl  zenodo_metadata.json
experiments/: abl.py  abl1000.py  abl804.py  annotator_eval_q1.py  article_bpe_baseline.py  article_clean_bpe_eval.py  article_clean_eval.py  article_clean_reversibility.py  article_clean_robustness.py  article_gold_eval.py  article_robustness_eval.py  check_et.py  codemix240.py  compare_v20_v21.py  debug_edecegim_inner.py  debug_remaining.py  extra_surface_eval.py  final1000_build_eval.py  lp.py  make_annotation_pack.py  morph1000_job.py  morph804_job.py  ou.py  probe1000.py  probe804.py  q1_eval_spp804.py  q1_final804.py  q1_final_gold_and_baselines.py  q1_hf_tok.py  q1_hf_tok_804.py  q1_morph_eval.py  q1_remaining7_harness.py  q1_sentence_recon.py  q1_spp_min.py  q1_spp_words.py  q1_world_adjudication_metrics.py  tiny_test.py  tokenize_words_cli.py  v21_core_validation.py  v21_debug_bildik.py  (+9 more)
frozen_results/: README_FINAL1000.en.md  README_FINAL1000.md  RESULTS_FREEZE.en.md  RESULTS_FREEZE.md
nedo_turkish_tokenizer/: __init__.py  _acronym_table.py  _domain_vocab.py  _suffix_table.py  apostrophe.py  engine.py  morphology.py  normalization.py  resources.py  segmentation.py  special_spans.py  tokenizer.py  types.py
paper/: NedoTurkishTokenizer_LRE_FullLength_Final1000_TRUBA.tex  NedoTurkishTokenizer_TR_Arxiv.tex  cover_letter_LRE.md
(+15 files in other folders)
